--- a/app/templates/puntos/index.html
+++ b/app/templates/puntos/index.html
@@ -45,10 +45,10 @@
           {% endif %}
         </td>
         <td class="table-info">
-          <a href="{{ url_for('puntos_edit', id=punto.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
-          <a href=" {{ url_for('puntos_delete', id=punto.id) }}"
+          {% if has_permission(session, 'punto_edit') %}<a href="{{ url_for('puntos_edit', id=punto.id) }}"><img src="static/images/pencil.png" class="fotito"></a>{% endif %}
+          {% if has_permission(session, 'punto_delete') %}<a href=" {{ url_for('puntos_delete', id=punto.id) }}"
             onclick="return confirm('Desea eliminar el punto: {{ punto.name }}? Esta acción no podrá deshacerse');"
-            title="Delete Merchant"><img src="static/images/delete.png" class="fotito"></a>
+            title="Delete Merchant"><img src="static/images/delete.png" class="fotito"></a>{% endif %}
         </td>
       </tr>
       {% endfor %}
