--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -57,8 +57,8 @@
           {% endif %}
         </td>
         {% if has_permission(session, 'user_edit') %}
-        <td class="table-info"><a href="{{ url_for('user_edit_info', id=user.id) }}"><img src="static/images/pencil.png"
-              class="fotito"></a>
+        <td class="table-info">
+          <a href="{{ url_for('user_edit_info', id=user.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
         </td>
         {% endif %}
       </tr>
