--- a/app/templates/report/new.html
+++ b/app/templates/report/new.html
@@ -59,10 +59,10 @@
       <p>
         <label>Estado</label></br>
         <select id="state" class="form-select-sm" name='state'>
-          <option value='unconfirmed'>Sin confirmar</option>
-          <option value='in_progress'>En curso</option>
-          <option value='solved'>Resuelta</option>
-          <option value='closed'>Cerrada</option>
+          <option value='Sin confirmar'>Sin confirmar</option>
+          <option value='En progreso'>En curso</option>
+          <option value='Resuelta'>Resuelta</option>
+          <option value='Cerrada'>Cerrada</option>
         </select>
       </p>
       <p>
