--- a/app/templates/report/new.html
+++ b/app/templates/report/new.html
@@ -66,6 +66,7 @@
         </select>
       </p>
       <p>
+        <label>Usuario asignado</label></br>
         <select name="user_id" id="">
           {% for user in users %}
           <option value="{{ user.id }}">{{ user.username }}</option>
