--- a/app/templates/report/edit.html
+++ b/app/templates/report/edit.html
@@ -67,6 +67,14 @@
         </select>
       </p>
       <p>
+        <label>Usuario asignado</label></br>
+        <select name="user_id" id="">
+          {% for user in users %}
+          <option value="{{ user.id }}">{{ user.username }}</option>
+          {% endfor %}
+        </select>
+      </p>
+      <p>
         <label class="form-label">Telefono del denunciante</label></br>
         {% if errors %}
         <input id="complainant_telephone" value="{{fieldsInfo.complainant_telephone}}" name="complainant_telephone" required />
@@ -100,7 +108,7 @@
       </p>
       
       <p>
-        <input class="btn btn-outline-dark btn-sm" type="submit" value="Crear" />
+        <input class="btn btn-outline-dark btn-sm" type="submit" value="Actualizar" />
       </p>
     </div>
   </form>
