Retoques de estilo y se agregó una vista de la información del usuario

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -23,6 +23,8 @@ body {
   font-size: 25px;
   text-align: center;
   color: #ffffff;
+  padding-top: 35px;
+  padding-left: 10px;
 }
 
 #logo {
@@ -269,4 +271,9 @@ textarea:invalid {
 .login_form > input {
   border: none;
   border-radius: 5px;
+}
+
+
+.campo{
+  color: aliceblue;
 }
