Se estilizó el inicio de ambas aplicaciones

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,6 +4,8 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-  <h1>Inicio</h1>
-  <p>Página de inicio de la aplicación</p>
+<div class="container mb-2 text-center rounded-3">
+<h1 class="campo">Inicie sesión para continuar</h1>
+  <img class="foto-inicio" src="../static/images/catedral.jpg" alt="">
+</div>
 {% endblock %}
