--- a/app/templates/user/show.html
+++ b/app/templates/user/show.html
@@ -11,23 +11,23 @@
             <div class="row">
                 <p>
                     <h4 class="campo">Email:</h4>
-                    <h5 class="informacion">{{fieldsInfo.email}}</h5>
+                    <h5 >{{fieldsInfo.email}}</h5>
                     <!-- <input id="email" value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo"
                         required /> -->
                 </p>
                 <p>
                     <h4 class="campo">Usuario:</h4>
-                    <h5 class="informacion">{{fieldsInfo.username}}</h5>
+                    <h5 >{{fieldsInfo.username}}</h5>
                     <!-- <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required /> -->
                 </p>
                 <p>
                     <h4 class="campo">Nombre: </h4>
-                    <h5 class="informacion">{{fieldsInfo.first_name}}</h5>
+                    <h5 >{{fieldsInfo.first_name}}</h5>
                     <!-- <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required /> -->
                 </p>
                 <p>
                     <h4 class="campo">Apellido: </h4></br>
-                    <h5 class="informacion">{{fieldsInfo.last_name}}</h5>
+                    <h5 >{{fieldsInfo.last_name}}</h5>
                     <!-- <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required /> -->
                 </p>
                 </div>
