--- a/app/templates/tracing/new.html
+++ b/app/templates/tracing/new.html
@@ -26,10 +26,10 @@
       <p>
         <label>Estado</label></br>
         <select id="state" class="form-select-sm" name='state'>
-          <option value='unconfirmed' {% if report.state=="unconfirmed" %} selected="selected" {% endif %}>Sin confirmar</option>
-          <option value='in_progress' {% if report.state=="in_progress" %} selected="selected" {% endif %}>En curso</option>
-          <option value='solved' {% if report.state=="solved" %} selected="selected" {% endif %}>Resuelta</option>
-          <option value='closed' {% if report.state=="closed" %} selected="selected" {% endif %}>Cerrada</option>
+          <option value='Sin confirmar'>Sin confirmar</option>
+          <option value='En progreso'>En curso</option>
+          <option value='Resuelta'>Resuelta</option>
+          <option value='Cerrada'>Cerrada</option>
         </select>
       </p>
     
