--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -55,24 +55,31 @@
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('zones_index') }}">Administrar zonas
-                inundables</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('puntos_index') }}">Administrar puntos de
-                encuentro</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('evacuationRoute_index') }}">Administrar
-                recorridos de
-                evacuación</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('reports_index') }}">Administrar denuncias</a>
-            </li>
-            {% if has_permission(session, 'user_index') %}
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('user_index') }}">Usuarios</a></li>
+            {% if has_permission(session, 'zone_index') %}
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('zones_index') }}">Administrar zonas
+                  inundables</a>
+              </li>
             {% endif %}
-            <!-- Reemplazar el user index por el nombre del permiso para acceder a la configuracion -->
+            {% if has_permission(session, 'punto_index') %}
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('puntos_index') }}">Administrar puntos de
+                  encuentro</a></li>
+            {% endif %}
+            {% if has_permission(session, 'route_index') %}
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('evacuationRoute_index') }}">Administrar
+                  recorridos de
+                  evacuación</a></li>
+            {% endif %}
+            {% if has_permission(session, 'report_index') %}
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('reports_index') }}">Administrar denuncias</a>
+              </li>
+            {% endif %}
             {% if has_permission(session, 'user_index') %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('configuracion_index') }}">Configuracion</a>
-            </li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('user_index') }}">Usuarios</a></li>
+            {% endif %}
+            {% if has_permission(session, 'config_index') %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('configuracion_index') }}">Configuracion</a>
+              </li>
             {% endif %}
           </ul>
         </div>
@@ -99,7 +106,7 @@
 
   <!-- ------------------------ FOOTER -------------------- -->
   <footer class="footer {{g.config.tema_privado}}">
-    <p>Proyecto de software</p>
+    <p>Proyecto de softwadasdsre</p>
     {% block footer %}
     {% endblock %}
   </footer>
